<?xml version="1.0"?>
<package format="2">

  <name>ampoule_launcher</name>
  <version>0.0.1</version>
  <description>Activate amppoule launcher trought serial connection.</description>

  <maintainer email="nowrite@fel.cvut.cz">Pavel</maintainer>
  <author email="nowrite@fel.cvut.cz">Vojta3310</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>


  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
